hello-world/namespace-hello.yaml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": {
    "name": "hello-world",
    "labels": {
      "name": "helloworld"
    }
  }
}
