hello-world/hello-gcp.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hello-world-deployment
  namespace: hello-world
  labels:
    app: front
spec:
  selector:
    matchLabels:
      app: front
  replicas: 1
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: hello-world
        image: quay.io/xavierbaude/hello-world
        ports:
        - containerPort: 8888
        resources:
          limits:
            cpu: '1'
            memory: 1024Mi
          requests:
            cpu: '1'
            memory: 1024Mi
