hello-world/hello-svc-clusterip.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-world-deployment
  namespace: hello-world
spec:
  selector:
    app: front 
  ports:
  - protocol: TCP
    port: 8080
  type: ClusterIP
